# mtg

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deps.edn  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/mtg-qdrant-expert/: SKILL.md
.github/workflows/: ci.yml  release.yml
dev/: dev.clj  system.edn  user.clj
docs/: CODEX_AGENT_GUIDE.md  QDRANT_QUERY_GUIDE.md  REPO_MAP.md  RULES_SKOS_MODEL.md  SCRYFALL_JSONLD_MODEL.md  WORKFLOWS.md
mtg_ontology/: __init__.py  card_jsonld.py  cli.py  constants.py  embeddings.py  ingest.py  qdrant_snapshot.py  qdrant_store.py  rules_fetch.py  rules_parser.py  scryfall.py  utils.py  validate_rules.py
resources/: mtg.ttl  oracle.ttl  scryfall.ttl
resources/MagicCompRules/: 20230414.txt  20230616.txt  20260116.json  latest.json
resources/mtg/: rules.context.jsonld  rules.skos.jsonld  rules.ttl
resources/scryfall/: README.md  context.jsonld  latest-oracle.json  sample-cards.json
scripts/: bootstrap_qdrant_from_release.sh  download_previous_oracle_snapshot.py  download_release_snapshots.py  mtg_retrieve.py  test_e2e.sh  test_smoke.sh  wait_for_qdrant.sh
skills/mtg-qdrant-expert/agents/: openai.yaml
src/clj/net/wikipunk/: mtg.clj
src/cljc/net/wikipunk/mtg/: boot.clj
src/cljc/net/wikipunk/rdf/: mtg.cljc  oracle.cljc  scryfall.cljc
src/cljc/net/wikipunk/rdf/mtg/: rules.cljc
src/net/wikipunk/rdf/: mtg.clj  scryfall.clj
src/net/wikipunk/rdf/mtg/: rules.clj
